[package]
name = "morse-avr"
version = "0.1.0"
authors = ["Barış Ürüm <barisurum.works@gmail.com>"]
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "morse-avr"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0"
ag-lcd = { version = "0.2.0" }

[dependencies.avr-device]
version = "0.5.4"

[dependencies.morse-codec]
path = "../morse-codec"
features = ["decoder"]

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "3e362624547462928a219c40f9ea8e3a64f21e5f"
features = ["arduino-uno"]

# The latest releases of `proc-macro2` do not support the rust toolchain that
# we use.  Thus, we must fix this dependency to an older version where our
# toolchain is still supported.  See https://github.com/Rahix/avr-hal/issues/537
[build-dependencies.proc-macro2]
version = "=1.0.79"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
